--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "l2soft-user-dashboard",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Bogdan Bylinski <bylinski.bogdan@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BogdanBylinski/L2soft-user-dashboard.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BogdanBylinski/L2soft-user-dashboard/issues"
+  },
+  "homepage": "https://github.com/BogdanBylinski/L2soft-user-dashboard#readme",
+  "description": ""
 }
